--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -78,9 +78,9 @@
 										<li class="user-num-sell">
 											<font size="2"><span class="lang" data-locale="det_producednum"></span><span class="sellnum"></span></font>	
 										</li>
-										<li class="user-num-sell2">
+										<!--<li class="user-num-sell2">
 											<font size="2"><span class="lang" data-locale="ticknumber"></span><span class="ticknum"></span></font>											
-										</li>
+										</li>-->
 									</ul>
 								</div>
 								<ul class="user-comment-list">
