详情页面交换按钮跳转事件修改

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -708,14 +708,12 @@
 					mode = 'exchange';
 					params.mode = mode;
 					mui.openWindow({
-						/*url: "../../transaction/select_item.html",
+						url: "../../transaction/select_item.html",
 						id: "selectitem",
 						extras: {
 							"commodity_id": codid,
 							"mode": mode
-						}*/
-						url:"/pages/login/emai_summate.html",
-						id:"emaisummate"
+						}
 					})
 				} else {
 					mode = 'gratis';
