--- a/kankan/pages/main/home.html
+++ b/kankan/pages/main/home.html
@@ -38,14 +38,14 @@
 			}
 			
 			i {
-				display:block;
-				background:#f00;
-				border-radius:50%;
-				width:5px;
-				height:5px;
-				top:0px;
-				right:0px;
-				position:absolute;
+				display: block;
+				background: #f00;
+				border-radius: 50%;
+				width: 5px;
+				height: 5px;
+				top: 0px;
+				right: 0px;
+				position: absolute;
 			}
 		</style>
 	</head>
@@ -53,7 +53,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-icon mui-pull-left" id="user">
-				<img src="../../images/default.jpg"/>
+				<img src="../../images/default.jpg" />
 			</a>
 			<h1 id="title" class="mui-title lang" data-locale="app_name"></h1>
 			<a style="position:relative;" class="mui-icon-extra mui-icon-extra-notice mui-pull-right" id="offCanvasShow">
@@ -69,30 +69,47 @@
 	<script src="../../js/language.js"></script>
 	<script src="../../js/common.js"></script>
 	<script type="text/javascript" charset="UTF-8">
-		
-		window.addEventListener("updateUserImgEvent", function(event){
-			if (DEBUG) {
+		window.addEventListener("updateUserImgEvent", function(event) {
+			if(DEBUG) {
 				alert("updateUserImgEvent[imgURL=" + event.detail.userImgURL + "]");
 			}
 			$('#user img').attr('src', event.detail.userImgURL);
 		});
-		
-		window.addEventListener("updateNoticeStatusEvent", function(event){
-			if (DEBUG) {
+
+		window.addEventListener("updateNoticeStatusEvent", function(event) {
+			if(DEBUG) {
 				alert("updateNoticeStatusEvent[flg=" + event.detail.flg + "]");
 			}
-			if (event.detail.flg === "1") {
+			if(event.detail.flg === "1") {
 				$('i').show();
 			} else {
 				$('i').hide();
 			}
 		});
-		
-		mui("header").on("tap","#offCanvasShow",function(){
-			mui.openWindow({
+
+		mui("header").on("tap", "#offCanvasShow", function() {
+			var isLogin = plus.storage.getItem("LoginFlag");
+			if(!isLogin) {
+				plus.nativeUI.confirm(TextMessage.test, function(e) {
+					if(e.index != 0) {
+						mui.openWindow({
+							id: "login",
+							url: "../login/login.html",
+							waiting: {
+								autoShow: false
+							},
+							show: {
+								duration: 200
+							}
+						});
+					}
+				}, TextMessage.sharetitle, [TextMessage.cancel, TextMessage.yes]);
+			} else {
+				mui.openWindow({
 					id: 'news',
 					url: 'news.html',
 				});
+			}
 		});
 		(function(mui, doc) {
 			mui.init({
@@ -153,10 +170,10 @@
 					var isLogin = plus.storage.getItem("LoginFlag");
 					if(isLogin == "isLogin") {
 						mui.openWindow({
-							id:"user",
-							url:"user/user.html",
+							id: "user",
+							url: "user/user.html",
 							waiting: {
-								autoShow:false
+								autoShow: false
 							}
 						});
 					} else {
