--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -815,14 +815,25 @@
 							}
 							return;
 						}
+						var stylimg="";
+						var imgwidth=parseInt($(window).width())/2-34;
 						data.forEach(function(item) {
+							var heightim=item.img_flag.height;
+							var widthim=item.img_flag.width;
+							if(heightim > widthim){
+								var orginbi=heightim/widthim;
+								var actuheight=imgwidth*orginbi;
+								var heicha=actuheight-160;
+								var toppx=heicha/2;
+								stylimg="margin-top:-"+toppx+"px;";
+							}
 							li = document.createElement('li');
 							li.className = 'mui-table-view-cell mui-col-sm-6 mui-col-xs-6';
 							var listItemHTML = new Util.StringBuilder();
 							listItemHTML.append('<div class="li-content">')
 								.append('<div class="comm-item">')
 								.appendFormat('<div class="item-tap mui-col-sm-12 mui-col-xs-12" data-comm-id="{0}">', item.commodity_id)
-								.appendFormat('<div class="item-img-box"><img class="lazy" src="../../images/nopic.jpg" data-original="{0}"></div>', item.img_flag)
+								.appendFormat('<div class="item-img-box"><img class="lazy" src="../../images/nopic.jpg" data-original="{0}" style="{1}"></div>', item.img_flag.url,stylimg)
 								//.appendFormat('<img src="{0}">', item.img_flag)
 								.appendFormat('<span>{0}</span>', item.address)
 								.append('</div>')
@@ -845,18 +856,6 @@
 							fragment.appendChild(li);
 						});
 						updateListView(fragment, ul, index, reverse, self);
-						$(".item-img-box img").each(function(i){
-							var img = $(this);
-							var realWidth = $(this).width(); //图片真实的宽度
-							var realHeight = $(this).height(); //图片真实的高度
-							var cha = realHeight - 160 * 1;
-							if(cha>0){
-								var bival = cha / 2;
-								//alert($(this).attr("src"));
-								$(this).attr("style", "margin-top: -"+bival+"px;");
-							}
-							
-						});
 					};
 
 					var updateListView = function(fragment, ul, index, reverse, self) {
