--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -227,7 +227,7 @@
 				var trans_deliver = transinfo[0].deliver;
 				var trans_type = transinfo[0].trans_type;
 				var buyer_deliver, seller_deliver, buyer_urge_r, seller_urge_r, buyer_urge_d, seller_urge_d, buyer_receipt, seller_receipt;
-				var buyer_flag = false;
+				
 				for(var u in usersinfo) {
 					if(usersinfo[u].user_id == buyer_id) {
 						buyer_deliver = usersinfo[u].deliver_flag;
@@ -241,8 +241,8 @@
 						seller_receipt = usersinfo[u].receipt_flag;
 					}
 				}
-				if(buyer_id == cur_user_id) buyer_flag = 'true';
-
+				var buyer_flag = false;
+				if(buyer_id == cur_user_id) buyer_flag = true;
 				$("#trans_status").val(trans_status);
 				$("#trans_mode").val(trans_mode);
 				$("#trans_deliver").val(trans_deliver);
@@ -320,7 +320,7 @@
 					buyer_msg += '<img style="height:85px;width:128px;" class="mui-media-object" src="' + buyer_comm_img + '">';
 					buyer_msg += '</a>';
 					buyer_msg += '<input type="hidden" name="buyer_commodity_id" value="' + buyer_comm_id + '">';
-					buyer_msg += '<input type="hidden" name="buyer_user_id" value="' + buyer_id + '">';
+					buyer_msg += '<input type="hidden" id="buyer_user_id" name="buyer_user_id" value="' + buyer_id + '">';
 
 					if(buyer_flag) {
 						$(".cur-user").html(buyer_msg);
@@ -490,7 +490,7 @@
 				var params = {
 					"transid": trans_id
 				};
-				var buyer_id = $("input[name='buyer_user_id']").val();
+				var buyer_id = transinfo[0].issue_user_id;
 				if(trans_type == 0) {
 					$(".tran-button-sell font").text("请求终止");
 				} else {
@@ -538,7 +538,12 @@
 							}
 						}
 					} else {
-						$(".tran-button-buy font").text("确认交易");
+						if(buyer_flag == 'false') {
+							$(".tran-button-buy font").text("确认交易");
+						}else{
+							$(".tran-button-buy font").text("等待卖家确认");
+						}
+						
 					}
 				} else if(status == 1) {
 					if(buyer_flag == 'true') {
@@ -572,8 +577,9 @@
 					}
 				} else if(status == 2) {
 					if(buyer_flag == 'true') {
-						if(trans_type != 0) {
+						if(trans_mode != 0) {
 							if(deliver == 0) {
+								alert("aaaa");
 								$(".tran-button-buy font").text("催促卖家发货");
 							} else {
 								$(".tran-button-buy font").text("确认收货");
@@ -594,7 +600,7 @@
 							}
 						}
 					} else {
-						if(trans_type != 0) {
+						if(trans_mode != 0) {
 							if(deliver == 0) {
 								$(".tran-button-buy font").text("确认发货");
 							} else {
@@ -612,7 +618,6 @@
 									$(".tran-button-buy font").text("交易完成");
 								}
 							} else {
-								alert("确认收货");
 								$(".tran-button-buy font").text("确认发货");
 							}
 						}
@@ -625,7 +630,8 @@
 					"transid": trans_id
 				};
 				var status = $("#trans_status").val();
-				var mode = $("#trans_mode").val();
+				var trans_mode = $("#trans_mode").val();
+				var trans_type = $("#trans_type").val();
 				var deliver = $("#trans_deliver").val();
 				var buyer_flag = $("#buyer_flag").val();
 				var buyer_deliver = $("#buyer_deliver").val();
@@ -642,7 +648,7 @@
 					trans_flow('transSubmitOrder', params);
 				} else if(status == 2) {
 					if(buyer_flag == 'true') {
-						if(trans_type != 0) {
+						if(trans_mode != 0) {
 							if(deliver == 0) {
 								trans_flow('transUrgeDelive', params);
 							} else {
@@ -654,6 +660,7 @@
 								trans_flow('transUrgeDelive', params);
 							} else if(buyer_deliver == 1 && seller_deliver == 1) {
 								if(buyer_receipt == 0) {
+									params.charity = 0;
 									trans_flow('transOrderReceipt', params);
 								} else if(buyer_receipt == 1 && seller_receipt == 0) {
 									trans_flow('transUrgeReceipt', params);
@@ -665,7 +672,7 @@
 							}
 						}
 					} else {
-						if(trans_type != 0) {
+						if(trans_mode != 0) {
 							if(deliver == 0) {
 								trans_flow('transOrderLogustics', params);
 							} 
@@ -674,13 +681,14 @@
 								trans_flow('transUrgeDelive', params);
 							} else if(buyer_deliver == 1 && seller_deliver == 1) {
 								if(seller_receipt == 0) {
+									params.charity = 0;
 									trans_flow('transOrderReceipt', params);
 								} else if(buyer_receipt == 1 && seller_receipt == 0) {
 									trans_flow('transUrgeReceipt', params);
 								} else {
 									gotoEvaluate(trans_id);
 								}
-							} else if(buyer_deliver == 0) {
+							} else if(seller_deliver == 0) {
 								trans_flow('transOrderLogustics', params);
 							}
 						}
@@ -713,7 +721,7 @@
 							$(".tran-name-middle-status font").html(tranStatusVal); //showTranCommodMsg(usersinfo, commdinfo, messginfo);
 							var buyer_id = transinfo.issue_user_id;
 							var seller_id = transinfo.accept_user_id;
-							var cur_user_id = data.data.myid;
+							var cur_user_id = data.myid;
 							var trans_mode = transinfo[0].trans_mode;
 							var trans_status = transinfo[0].status;
 							var trans_deliver = transinfo[0].deliver;
