--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -16,6 +16,9 @@
 			body {
 				background-color: #efeff4;
 			}
+			.pimgbox{
+				width:113px;height:76px;text-align:center;border:1px solid #cccccc;overflow:hidden;
+			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="../../../css/feedback.css" />
 		<link rel="stylesheet" href="../../../css/kankan_home.css">
@@ -490,6 +493,7 @@
 				});
 			});
 		}
+		var imgwidth=parseInt($(window).width())/3-9;
 		//show user information
 		function showuser(results){
 			$(".myfavourateshow").empty();
@@ -531,6 +535,8 @@
 					userlanageval[ukey].checked="checked";
 				}
 			}
+			var toppx=0;
+			var toppxpra=0;
 			var exhibit_commdata=results.data.exhibit_comm;
 			var exhibit_html='<div class="mui-slider-item" style="height:25%">';
 				exhibit_html+='<ul class="user-item-list">';
@@ -538,9 +544,18 @@
 				var k = ex + 1 * 1;
 				var commexid=exhibit_commdata[ex].commodity_id;
 				var commeximg_url=exhibit_commdata[ex].img_url;
+				var realwidth=exhibit_commdata[ex].img_url_width;
+				var realheight=exhibit_commdata[ex].img_url_height;
+				var oribi=realheight/realwidth;
+				var showheight=imgwidth*oribi;
+				var cha1=showheight-72;
+				if(cha1>0){
+					toppx=cha1/2;
+				}
+				
 				exhibit_html+='<li class="user-goods-grid codedite">';
 				exhibit_html+='<a id="'+commexid+'" href="#">';
-				exhibit_html+='<img style="width: 113px;height: 76px;" src="'+commeximg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'">';
+				exhibit_html+='<div class="pimgbox"><img style="width: 100%;margin-top:-'+toppx+'px;" src="'+commeximg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
 				exhibit_html+='</a>';
 				exhibit_html+='</li>';
 				var yunum=k%6;
@@ -561,9 +576,17 @@
 				var ki = pi + 1 * 1;
 				var praisepid=praise_commdata[pi].commodity_id;
 				var praiseimg_url=praise_commdata[pi].img_url;
+				var realwidthpra=praise_commdata[pi].img_url_width;
+				var realheightpra=praise_commdata[pi].img_url_height;
+				var oribipra=realheightpra/realwidthpra;
+				var showheightpra=oribipra*imgwidth;
+				var cha2=showheightpra-72;
+				if(cha2>0){
+					toppxpra=cha2/2;
+				}
 				praise_html+='<li class="user-goods-grid detail">';
 				praise_html+='<a id="'+praisepid+'" href="#">';
-				praise_html+='<img style="width: 113px;height: 76px;" src="'+praiseimg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'">';
+				praise_html+='<div class="pimgbox"><img style="width: 100%;margin-top:-'+toppxpra+'px;" src="'+praiseimg_url+'" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
 				praise_html+='</a>';
 				praise_html+='</li>';
 				var kiunum=ki%6;
