首页价格隐藏掉

--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -841,7 +841,7 @@
 								.append('<div class="height-max mui-row">')
 								.append('<div class="height-max mui-col-sm-8 mui-col-xs-8">')
 								.appendFormat('<div class="comm-name mui-col-sm-12">{0}</div>', HTMLDecode(item.comm_name))
-								.appendFormat('<div class="comm-price mui-col-sm-12">{0} P</div>', item.price)
+								//.appendFormat('<div class="comm-price mui-col-sm-12">{0} P</div>', item.price)
 								.append('</div>')
 								.append('<div class="height-max mui-col-sm-4 mui-col-xs-4">')
 								.appendFormat('<span class="comm-like mui-icon-extra mui-icon-extra-heart-filled ' + "{0}" + '">', item.praise_flg == 0 ? "comm-like-gray" : "comm-like-red")
