登录页面返回键显示

--- a/kankan/pages/login/login.html
+++ b/kankan/pages/login/login.html
@@ -66,10 +66,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<!--
-			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
-			<a class="lang" data-locale="back"></a>
-			-->
+						<a class="mui-action-back mui-icon mui-icon-left-nav"><font class="lang" data-locale="back" size="3"></font></a>
 			<h1 class="mui-title"><span class="lang" data-locale="login"></span></h1>
 		</header>
 		<div class="mui-content">
