--- a/kankan/pages/main/products/productslist.html
+++ b/kankan/pages/main/products/productslist.html
@@ -87,7 +87,7 @@
 			});
 			window.addEventListener('prolid', function(event) {
 				var uid = event.detail.id;
-				console.log(uid);
+				//console.log(uid);
 				getmessage(uid);
 			});
 			//get message
